tests/fixtures/compile_errors/call_undefined_function_on_memory_struct.fe
struct Something:
  val: u8

contract Bar:
  pub def test():
    thingy: Something = Something(val=u8(1))
    thingy.doesnt_exist()